--- a/src/routes/css/main.css
+++ b/src/routes/css/main.css
@@ -8,7 +8,7 @@
   --hover-color: rgba(148, 71, 186, 0.2);
   --shadow: rgba(0, 0, 0, 0.1);
   --border-radius: 10px;
-  --font-family: 'New Times Roman', sans-serif;
+  --font-family: 'Helvetica', sans-serif;
   --font-size-base: 1rem;
   --font-size-lg: 1.2rem;
   --font-size-xl: 2rem;
